# em-training-example

./: .gitignore  BasicHelper.cc  BasicHelper.h  CMakeLists.txt  Edge.cc  Edge.h  Helper.cc  Helper.h  NLPHelper.cc  NLPHelper.h  Node.h  Notation.cc  Notation.h  NotationConstantsTwoTag.h  NotationTest.cc  README.md  TrellisAid.cc  TrellisAid.h  TwoTagExample.cc
that-ad-hoc-issue/: Constants.h  Notation.cc  Notation.h  TwoTagExample.cc
